--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.learn.iet-framework": "4.0.4",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.netcode.gameobjects": "1.12.0",
+    "com.unity.probuilder": "6.0.5",
     "com.unity.render-pipelines.high-definition": "17.0.4",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.services.authentication": "3.4.1",
